--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       
       <!-- Card 1: Calculadora Régimen Simplificado -->
-      <a href="index.html" class="card card-hover cursor-pointer">
+      <a href="https://calculadorarse.netlify.app" class="card card-hover cursor-pointer" target="_blank" rel="noopener noreferrer">
         <div class="icon-wrapper icon-blue">
           🧮
         </div>
